# CGPExperiments

./: .gitignore  CMakeLists.txt  README.md  experiments.list  runExperiments.py
analysis/fitcurve/: FitCurveAnalysis.ipynb
analysis/fitcurve/.ipynb_checkpoints/: FitCurveAnalysis-checkpoint.ipynb
analysis/image/: GenePerfAnalysis.ipynb  GenePerfReport.ipynb  MccLossesAnalysis.ipynb  Multi Objective Losses Analysis.ipynb  VisualizePredictions.ipynb  collectLosses.py  generateImageViz.py
application/: displayImages.cpp  dumpBuffers.cpp  genePerfTest.cpp  generateCurve.cpp  testRng.cpp  trainCgp.cpp
core/include/: CgpTrainer.hpp  CheckpointSaver.hpp  DataChunk.hpp  DataChunkProvider.hpp  ExperimentConfiguration.hpp  FitnessFunction.hpp  FitnessFunctionFactory.hpp  Gene.hpp  GeneFactory.hpp  GenePool.hpp  Genotype.hpp  Island.hpp  JsonUtils.hpp  ProgressPrinter.hpp  RandomNumberGenerator.hpp  Types.hpp
core/src/: CgpTrainer.cpp  CheckpointSaver.cpp  DataChunk.cpp  DataChunkProvider.cpp  ExperimentConfiguration.cpp  Gene.cpp  GeneFactory.cpp  GenePool.cpp  Genotype.cpp  Island.cpp  RandomNumberGenerator.cpp
dataGeneration/: GenerateCardCgpImageDataset.ipynb  cardImageLabeler.py
experiments/: cardConfig.json  fitCurveConfig.json  satelliteConfig.json  satteliteConfig.json
experiments/genesetExperiments/full/: 0.json  1.json  2.json  3.json  4.json
experiments/genesetExperiments/sparse/: 0.json  1.json  2.json  3.json  4.json
experiments/multiObjectiveExperiments/0/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.0000001/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.0000005/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.000001/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.000005/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.00001/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.00005/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.0001/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.001/: 0.json  1.json  2.json
experiments/multiObjectiveExperiments/0.01/: 0.json  1.json  2.json
experiments/satelliteExperiments/: largeGenes.json  smallGenes.json
fitCurve/include/: FitCurveFitnessFunctionFactory.hpp  FitCurveGeneFactory.hpp  L1ErrorFitnessFunction.hpp  L2ErrorFitnessFunction.hpp
fitCurve/include/genes/: AddGene.hpp  ConstantOutputGene.hpp  CosGene.hpp  DivideProtectedGene.hpp  MultiplyGene.hpp  SinGene.hpp  SubtractGene.hpp
fitCurve/src/: FitCurveFitnessFunctionFactory.cpp  FitCurveGeneFactory.cpp  L1ErrorFitnessFunction.cpp  L2ErrorFitnessFunction.cpp
fitCurve/src/genes/: AddGene.cpp  ConstantOutputGene.cpp  CosGene.cpp  DivideProtectedGene.cpp  MultiplyGene.cpp  SinGene.cpp  SubtractGene.cpp
image/include/: ImageFitnessFunctionFactory.hpp  ImageGeneFactory.hpp  L1FitnessFunction.hpp  L2FitnessFunction.hpp  MCCFitnessFunction.hpp  MccFitnessFunction.hpp  MccPerfFitnessFunction.hpp
image/include/genes/: AbsDifference.hpp  Add.hpp  AddC.hpp  Average.hpp  AverageValue.hpp  Canny.hpp  ConstantOutput.hpp  Dilate.hpp  Erode.hpp  Exp.hpp  Gabor.hpp  GaussianBlur.hpp  Laplace.hpp  LocalAverage.hpp  LocalMax.hpp  LocalMin.hpp  Log.hpp  (+24 more)
image/src/: ImageFitnessFunctionFactory.cpp  ImageGeneFactory.cpp  L1FitnessFunction.cpp  L2FitnessFunction.cpp  MCCFitnessFunction.cpp  MccFitnessFunction.cpp  MccPerfFitnessFunction.cpp
(+40 files in other folders)
